# 2026_team29

./: .env.example  .gitignore  .grype.yaml  .trivyignore  DEPLOYMENT.md  ISSUE_SKILL_TREE_AI.md  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md  STREAMING_IMPLEMENTATION.md  copilot-instructions.md  dependabot.yml
.github/decisions/: 001-ci-strategy.md  002-database-orm-selection.md  003-crud-pattern.md  004-ai-infrastructure-langchain.md  005-apex-legends-rank-distribution.md  005-oauth-token-encryption.md  006-admin-api-authentication.md  007-skilltree-initialization-timing.md  009-database-design-strategy.md  (+19 more)
backend/: .env.example  Dockerfile  INTEGRATION_TEST_RESULTS.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_all_tables.py  0002_create_profiles_table.py  0003_add_hashed_password.py  0003_create_oauth_accounts_table.py  0004_create_badges_table.py  0005_create_quests_table.py  0006_create_quest_progress_table.py  0007_create_skill_trees_table.py  e3b4e47f8ec0_create_users_table.py
backend/app/: main.py
backend/app/api/: admin.py  api.py
backend/app/api/endpoints/: analyze.py  auth.py  quest.py  quests.py  users.py
backend/app/core/: config.py  encryption.py  llm.py  password.py  prompts.py  prompts_streaming.py  rank.py  rate_limit.py
backend/app/crud/: badge.py  oauth_account.py  profile.py  quest.py  quest_progress.py  skill_tree.py  user.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/models/: badge.py  enums.py  oauth_account.py  profile.py  quest.py  quest_progress.py  skill_tree.py  user.py
backend/app/schemas/: analyze.py  badge.py  oauth_account.py  profile.py  quest.py  quest_progress.py  skill_tree.py  user.py
backend/app/services/: github_service.py  grades_service.py  mock_ai_service.py  quest_service.py  rank_service.py  skill_tree_service.py
backend/scripts/: seed_test_data.py  test_full_ai_generation.py  test_generation_speed.py  test_skill_tree_generation.py  test_skill_tree_personalization.py  test_streaming.py
backend/tests/: conftest.py
backend/tests/test_api/: test_admin.py  test_analyze.py  test_analyze_integration.py  test_analyze_mock.py  test_auth.py  test_quest.py  test_quest_auth.py  test_quest_non_generate.py  test_quests.py  test_users.py
backend/tests/test_core/: test_llm.py
backend/tests/test_crud/: test_oauth_account.py  test_profile.py  test_quest.py  test_skill_tree.py  test_user.py
backend/tests/test_schemas/: test_schema_badge.py  test_schema_oauth_account.py  test_schema_profile.py  test_schema_quest.py  test_validation.py
backend/tests/test_services/: INTEGRATION_TEST_README.md  test_rank_service.py  test_rank_service_integration.py  test_skill_tree_service.py
docs/: GITHUB_OAUTH_SETUP.md
frontend/: Dockerfile  package-lock.json  package.json
(+57 files in other folders)
