[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
# Decision: Pin dependencies to specific version ranges (not "*")
# Reason: Mitigates supply-chain risk from hijacked package updates
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.13.0"
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
# Decision: Pin dev dependencies to prevent CI instability
# Reason: Unpinned versions can introduce breaking changes unexpectedly
ruff = "^0.8.0"
pytest = "^8.3.0"
# Note: pip-audit removed - security scanning consolidated to Trivy (security.yml)

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"